# exercise

./: README.md
exercise/: CMakeLists.txt
exercise/PartialPersistence/: CMakeLists.txt  PartialPersistence.cpp  PartialPersistence.h
exercise/auto_ptr/: CMakeLists.txt  auto_ptr.cpp  auto_ptr.h  document.md
exercise/def/: CMakeLists.txt  def.cpp  def.h
exercise/delivery/: CMakeLists.txt  delivery.cpp  delivery.h  document.md
exercise/error/: CMakeLists.txt  error.cpp  error.h
exercise/exercise/: CMakeLists.txt  exercise.cpp  exercise.h
exercise/queue/: CMakeLists.txt  document.md  queue.cpp  queue.h
